dev/sass/_includes/_parallax.scss
/* ===========================================================
Parellax
============================================================*/

section.module:last-child {
  margin-bottom: 0;
}
// section.module h2 {
//   margin-bottom: 40px;
//   font-family: "Roboto Slab", serif;
//   font-size: 30px;
// }
// section.module p {
//   margin-bottom: 40px;
//   font-size: 16px;
//   font-weight: 300;
// }
section.module p:last-child {
  // margin-bottom: 0;
}
section.module.content {
  // padding: 40px 0;
}
section.module.parallax {
  // height: 600px;
  background-position: 50% 50%;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover; // for desktop
}
// section.module.parallax h1 {
//   color: rgba(255, 255, 255, 0.8);
//   font-size: 48px;
//   line-height: 600px;
//   font-weight: 700;
//   text-align: center;
//   text-transform: uppercase;
//   text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
// }
section.module.parallax-1 {

  background-image: url("../img/main-image-mobile.jpg");
  @media ($tablet-min) {
    background-image: url("../img/main-image-desktop.jpg"); 
  }
}
// section.module.parallax-2 {
//   background-image: url("../img/demo/_small/2.jpg");
// }
// section.module.parallax-3 {
//   background-image: url("../img/demo/_small/3.jpg");
// }

@media all and (min-width: 600px) {
  // section.module h2 {
  //   font-size: 42px;
  // }
  // section.module p {
  //   font-size: 20px;
  // }
  // section.module.parallax h1 {
  //   font-size: 96px;
  // }
}
@media all and (min-width: 960px) {
  // section.module.parallax h1 {
  //   font-size: 160px;
  // }
}

